# speech-to-speech

./: .gitignore  AGENTS.md  README.md  pyproject.toml  pyrightconfig.json  todo.md
configs/: codec_oracle.yaml  config.yaml  overfit.yaml  qwen3_smoke.yaml  train.yaml  wmt19_tts_longcat_acoustic_smoke.yaml  wmt19_tts_longcat_mixed_smoke.yaml  wmt19_tts_longcat_quality_longrun.yaml  wmt19_tts_longcat_smoke.yaml
docs/: contracts.md  diagonal-profile.md  longcat-bpe.md  model-config.md  model-design.md  roadmap.md  trainer-config.md  wmt19-quality-training.md  wmt19-speech-filter-analysis.md
jobs/: README.md  env.sh
scripts/: _acoustic_evaluation.py  _config.py  _entry.py  _generation_benchmark.py  _generation_probe.py  _generation_reporting.py  _logging.py  _overfit_composition.py  _overfit_support.py  acoustic_loss_smoke.py  codec_oracle.py  diagonal_benchmark.py  diagonal_profile.py  evaluate_free_running.py  filter_wmt19_quality.py  generation_smoke.py  overfit.py  prepare_wmt19_tts_longcat.py  semantic_generate_smoke.py  train.py  waveform_generate_smoke.py
tests/: helpers.py  test_acoustic.py  test_acoustic_dit.py  test_acoustic_evaluation.py  test_acoustic_rvq.py  test_audio_embedding.py  test_audio_tokenizer.py  test_batch_builder.py  test_codec_oracle.py  test_codec_oracle_flops.py  test_config.py  test_contracts.py  test_datamodule.py  test_dataset.py  test_diagonal.py  test_dit.py  test_example.py  test_fake_closure.py  test_generation.py  test_generation_reporting.py  test_logging.py  test_minimal_loop.py  test_model_loss_contracts.py  test_pl_module.py  (+9 more)
(+354 files in other folders)
